--- a/users-app/src/index.css
+++ b/users-app/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "moon";
+  font-style: normal;
+  font-weight: bold;
+  src: url("./fonts/MoonBold.otf") format("opentype");
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
